# osmpbfreader-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
.github/workflows/: sanity_checks.yml
examples/: count.rs  count_with_deps.rs  relation.rs  tutorial.rs
src/: blobs.rs  blocks.rs  borrowed_iter.rs  error.rs  fileformat.rs  groups.rs  iter.rs  lib.rs  objects.rs  osmformat.rs  osmformat.rs.bk  par.rs  reader.rs
src/reader/: get_objs_and_deps_callback.rs
tests/: clipperton.osm.pbf  compiletest.rs  reader.rs
tests/compile-fail/: test_borrowed_iter.rs  test_borrowed_iter2.rs
