[package]
name = "osmpbfreader"
version = "0.18.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
description = "Read OpenStreetMap PBF files in rust."
documentation = "https://docs.rs/osmpbfreader"
repository = "https://github.com/TeXitoi/osmpbfreader-rs"
keywords = ["openstreetmap", "osm", "pbf"]
categories = ["encoding", "science"]
license = "WTFPL"
readme = "README.md"
edition = "2021"

[badges]
travis-ci = { repository = "TeXitoi/osmpbfreader-rs" }
appveyor = { repository = "TeXitoi/osmpbfreader-rs" }

[dependencies]
byteorder = "1.3"
flat_map = { version = "0.0.10", features = ["serde1"] }
flate2 = "1.0"
par-map = "0.1"
protobuf = "3"
pub-iterator-type = "0.1"
self_cell = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
smartstring = { version = "1.0.1", features = ["serde"] }

[dev-dependencies]
log = "0.4"
env_logger = "0.9.0"

[build-dependencies]
protobuf-codegen = "3"
