[package]
name = "osmpbfreader"
version = "0.19.1"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
description = "Read OpenStreetMap PBF files in rust."
documentation = "https://docs.rs/osmpbfreader"
repository = "https://github.com/TeXitoi/osmpbfreader-rs"
keywords = ["openstreetmap", "osm", "pbf"]
categories = ["encoding", "science"]
license = "WTFPL"
readme = "README.md"
edition = "2021"

[features]
# Enables serde serialization/deserialization for all OpenStreetMap data structures
serde = ["dep:serde", "flat_map/serde1", "smartstring/serde"]

[dependencies]
byteorder = "1.3"
flat_map = "0.0.10"
flate2 = "1.0"
par-map = "0.1"
protobuf = "3"
pub-iterator-type = "0.1"
self_cell = "1.0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
smartstring = "1.0.1"

[dev-dependencies]
log = "0.4"
env_logger = "0.9.0"

[build-dependencies]
protobuf-codegen = "3"
